# abm-mental-health-repro

./: CLAUDE.md  README.md  brief.md  main.py  pyproject.toml  requirements.txt  research.md
src/: __init__.py
src/dashboard/: app.py
src/data/: citations.json
src/model/: __init__.py  agent.py  model.py
tests/: test_model.py
