[project]
name = "abm-mental-health-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.8.2",
    "mesa==2.1.5",
    "networkx==3.2.1",
    "numpy==1.26.2",
    "pandas==2.1.4",
    "plotly==5.18.0",
    "pydantic==2.5.3",
    "pytest==7.4.3",
    "pyyaml==6.0.1",
    "scipy==1.11.4",
    "seaborn==0.13.0",
    "streamlit==1.29.0",
]
